# arxiv

./: .gitattributes  .gitignore
LAM/: .gitattributes  ARCHITECTURE_EXPLANATION.md  EVALUATION_DIFFERENCES.md  (+182 more)
LAM/lam_package/: ALL_LONGEMBED_EXAMPLES.md  BUILD.md  BUILD_BACKEND_SELECTION.md  CLEANUP_SUMMARY.md  DIMENSION_PARAMETER_EXPLANATION.md  DUAL_ENCODER_README.md  EMBEDDING_EXPLANATION.md  FIXES_COMPLETED.md  FIXES_SUMMARY.md  FUNCTION_TESTING_SUMMARY.md  INSTALLATION_GUIDE.md  ISOLATION_TEST_RESULTS.md  LEMBNarrativeQARetrieval_EXAMPLES.md  LEMBQMSumRetrieval_EXAMPLES.md  LEMBSummScreenFDRetrieval_EXAMPLES.md  LEMBWikimQARetrieval_EXAMPLES.md  LICENSE_GUIDE.md  LONGEMBED_ANALYSIS.md  LONGEMBED_COMPLETE_BREAKDOWN.md  LONGEMBED_FINAL_FORMULA.md  LONGEMBED_FIX_EXPLAINED.md  LONGEMBED_STREAMING_VERIFICATION.md  LONGEMBED_TASKS_BREAKDOWN.md  MATRYOSHKA_API_NOTE.md  MATRYOSHKA_INTEGRATION_PLAN.md  MATRYOSHKA_SECURITY.md  METADATA_UPDATE_GUIDE.md  PERFECT_RECALL_RETRIEVAL_INTEGRATION.md  PERFECT_RECALL_USAGE.md  PRODUCTION_INTEGRATION_VERIFICATION.md  RAG_USE_CASE.md  README.md  RETRIEVAL_FIX.md  RETRIEVAL_SCORE_INVESTIGATION.md  ROOT_CAUSE_ANALYSIS.md  SCORING_EXPLANATION.md  SECURITY_AUDIT.md  TITANS_OPTIMIZATION.md  analyze_longembed_tasks.py  build.py  (+49 more)
LAM/lam_package/jax/: JAX_ACCURACY_FIXED.md  JAX_CACHE_ISSUE.md  JAX_CACHE_REALITY_CHECK.md  JAX_CODE_PROTECTION_SUMMARY.md  JAX_COMPILATION_EXPLANATION.md  JAX_IMPLEMENTATION.md  JAX_IMPLEMENTATION_STATUS.md  JAX_OPTIMIZATION_COMPLETE.md  JAX_PRECOMPILATION_EXPLANATION.md  JAX_PRODUCTION_RESEARCH.md  JAX_SPEED_ANALYSIS.md  JAX_VS_CYTHON_RESULTS.md  PROTECT_JAX_CODE.md  README.md  SETUP_JAX_INTEGRATION.md  _jax_core.py  _jax_model.py  _jax_model_optimized.py  benchmark_jax_vs_cython.py  debug_jax_speed.py  jax_deltanet_test.py  jax_vs_cython_comparison.py  protect_jax_code.py  test_jax_vs_cython_accuracy.py
LAM/lam_package/lam/: __init__.py  infinite_streamer.py  lam_license.json
LAM/lam_package/mteb_results/: STS17_predictions.json  STSBenchmark_predictions.json  proof_summary.json  results_summary.json
LAM/lam_package/mteb_results/sts/: STS12_predictions.json  STS13_predictions.json
LAM/lam_package/results/gate2_niah/: niah_results.json
LAM/lam_package/results/matryoshka/: matryoshka_results.json
LAM/lam_package/tests/: .gitignore  README.md  test_cpu_baseline.py  test_cpu_optimizations.py
(+80 files in other folders)
